dataset1235/2025-2/805158916/users/2200760145/executions/2118643220_680711497.log
== SUBMISSION (2025-09-01 15:50:20)
-- CODE: 
math.import
apotema = lado / 2  * math.tan * (math.pi / 12)
area = (6 * lado * apotema)
print(round, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
548.61
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
3
---- correct output:
100.77
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
4
---- correct output:
179.14
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
5
---- correct output:
279.9
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
6
---- correct output:
403.06
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
44.78
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:17:00)
-- CODE: 
math import
apotema = lado / (2  * math.tan) * (math.pi() / 12)
area = (6 * lado * apotema)
print(round, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
548.61
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
3
---- correct output:
100.77
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
4
---- correct output:
179.14
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
5
---- correct output:
279.9
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
6
---- correct output:
403.06
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
44.78
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:40:06)
-- CODE: 
math_import
area = (6 * lado * apotema)
apotema = lado / 2 math.tan (math.pi / 12)
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
548.61
-- ERROR:
File "XXXX", line 3
    apotema = lado / 2 math.tan (math.pi / 12)
                       ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
3
---- correct output:
100.77
-- ERROR:
File "XXXX", line 3
    apotema = lado / 2 math.tan (math.pi / 12)
                       ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
4
---- correct output:
179.14
-- ERROR:
File "XXXX", line 3
    apotema = lado / 2 math.tan (math.pi / 12)
                       ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
5
---- correct output:
279.9
-- ERROR:
File "XXXX", line 3
    apotema = lado / 2 math.tan (math.pi / 12)
                       ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
6
---- correct output:
403.06
-- ERROR:
File "XXXX", line 3
    apotema = lado / 2 math.tan (math.pi / 12)
                       ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
44.78
-- ERROR:
File "XXXX", line 3
    apotema = lado / 2 math.tan (math.pi / 12)
                       ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:41:46)
-- CODE: 
math import
apotema = lado / 2  * math.tan (math.pi / 12)
area = (6 * lado * apotema)
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
548.61
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
3
---- correct output:
100.77
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
4
---- correct output:
179.14
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
5
---- correct output:
279.9
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
6
---- correct output:
403.06
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
44.78
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:42:39)
-- CODE: 
math import
apotema = lado / 2  * math.tan() (math.pi() / 12)
area = (6 * lado * apotema)
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
548.61
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
3
---- correct output:
100.77
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
4
---- correct output:
179.14
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
5
---- correct output:
279.9
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
6
---- correct output:
403.06
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
44.78
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:41:16)
-- CODE: 
math_import
apotema = lado / 2 math.tan (math.pi / 12)
area = (6 * lado * apotema)
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
548.61
-- ERROR:
File "XXXX", line 2
    apotema = lado / 2 math.tan (math.pi / 12)
                       ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
3
---- correct output:
100.77
-- ERROR:
File "XXXX", line 2
    apotema = lado / 2 math.tan (math.pi / 12)
                       ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
4
---- correct output:
179.14
-- ERROR:
File "XXXX", line 2
    apotema = lado / 2 math.tan (math.pi / 12)
                       ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
5
---- correct output:
279.9
-- ERROR:
File "XXXX", line 2
    apotema = lado / 2 math.tan (math.pi / 12)
                       ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
6
---- correct output:
403.06
-- ERROR:
File "XXXX", line 2
    apotema = lado / 2 math.tan (math.pi / 12)
                       ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
44.78
-- ERROR:
File "XXXX", line 2
    apotema = lado / 2 math.tan (math.pi / 12)
                       ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:39:35)
-- CODE: 
math __import__
area = (6 * lado * apotema)
apotema = lado / 2 math.tan (math.pi/12)
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
548.61
-- ERROR:
File "XXXX", line 1
    math __import__
         ^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
3
---- correct output:
100.77
-- ERROR:
File "XXXX", line 1
    math __import__
         ^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
4
---- correct output:
179.14
-- ERROR:
File "XXXX", line 1
    math __import__
         ^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
5
---- correct output:
279.9
-- ERROR:
File "XXXX", line 1
    math __import__
         ^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
6
---- correct output:
403.06
-- ERROR:
File "XXXX", line 1
    math __import__
         ^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
44.78
-- ERROR:
File "XXXX", line 1
    math __import__
         ^^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:59:35)
-- CODE: 
math.import
apotema = lado / 2  * math.tan * (math.pi / 12)
area = (6 * lado * apotema)
print(round, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
548.61
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
3
---- correct output:
100.77
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
4
---- correct output:
179.14
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
5
---- correct output:
279.9
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
6
---- correct output:
403.06
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
44.78
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:49:22)
-- CODE: 
math.import
apotema = lado / 2  * math.tan * (180 / 12)
area = (6 * lado * apotema)
print(round, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
548.61
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
3
---- correct output:
100.77
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
4
---- correct output:
179.14
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
5
---- correct output:
279.9
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
6
---- correct output:
403.06
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
44.78
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:45:07)
-- CODE: 
math import
apotema = lado / 2  * math.tan() (math.pi() / 12)
area = (6 * lado * apotema)
print(, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
548.61
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
3
---- correct output:
100.77
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
4
---- correct output:
179.14
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
5
---- correct output:
279.9
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
6
---- correct output:
403.06
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
44.78
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:41:31)
-- CODE: 
math_import
apotema = lado / 2  * math.tan (math.pi / 12)
area = (6 * lado * apotema)
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
548.61
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    math_import
NameError: name 'math_import' is not defined
-- TEST CASE 2:
---- input:
3
---- correct output:
100.77
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    math_import
NameError: name 'math_import' is not defined
-- TEST CASE 3:
---- input:
4
---- correct output:
179.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    math_import
NameError: name 'math_import' is not defined
-- TEST CASE 4:
---- input:
5
---- correct output:
279.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    math_import
NameError: name 'math_import' is not defined
-- TEST CASE 5:
---- input:
6
---- correct output:
403.06
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    math_import
NameError: name 'math_import' is not defined
-- TEST CASE 6:
---- input:
2
---- correct output:
44.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    math_import
NameError: name 'math_import' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:39:46)
-- CODE: 
math_import
area = (6 * lado * apotema)
apotema = lado / 2 math.tan (math.pi/12)
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
548.61
-- ERROR:
File "XXXX", line 3
    apotema = lado / 2 math.tan (math.pi/12)
                       ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
3
---- correct output:
100.77
-- ERROR:
File "XXXX", line 3
    apotema = lado / 2 math.tan (math.pi/12)
                       ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
4
---- correct output:
179.14
-- ERROR:
File "XXXX", line 3
    apotema = lado / 2 math.tan (math.pi/12)
                       ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
5
---- correct output:
279.9
-- ERROR:
File "XXXX", line 3
    apotema = lado / 2 math.tan (math.pi/12)
                       ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
6
---- correct output:
403.06
-- ERROR:
File "XXXX", line 3
    apotema = lado / 2 math.tan (math.pi/12)
                       ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
44.78
-- ERROR:
File "XXXX", line 3
    apotema = lado / 2 math.tan (math.pi/12)
                       ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:08:39)
-- CODE: 
math import
apotema = lado / 2  * math.tan() (math.pi() / 12)
area = (6 * lado * apotema)
print(round, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
548.61
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
3
---- correct output:
100.77
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
4
---- correct output:
179.14
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
5
---- correct output:
279.9
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
6
---- correct output:
403.06
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
44.78
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:49:06)
-- CODE: 
math.import
apotema = lado / 2  * math.tan * (math.pi / 12)
area = (6 * lado * apotema)
print(round, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
548.61
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
3
---- correct output:
100.77
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
4
---- correct output:
179.14
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
5
---- correct output:
279.9
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
6
---- correct output:
403.06
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
44.78
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:39:00)
-- CODE: 
math import
area = (6 * lado * apotema)
apotema = lado / 2math.tan (math.pi/12)
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
548.61
-- ERROR:
File "XXXX", line 3
    apotema = lado / 2math.tan (math.pi/12)
                     ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
3
---- correct output:
100.77
-- ERROR:
File "XXXX", line 3
    apotema = lado / 2math.tan (math.pi/12)
                     ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
4
---- correct output:
179.14
-- ERROR:
File "XXXX", line 3
    apotema = lado / 2math.tan (math.pi/12)
                     ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
5
---- correct output:
279.9
-- ERROR:
File "XXXX", line 3
    apotema = lado / 2math.tan (math.pi/12)
                     ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
6
---- correct output:
403.06
-- ERROR:
File "XXXX", line 3
    apotema = lado / 2math.tan (math.pi/12)
                     ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
2
---- correct output:
44.78
-- ERROR:
File "XXXX", line 3
    apotema = lado / 2math.tan (math.pi/12)
                     ^
SyntaxError: invalid decimal literal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:50:11)
-- CODE: 
math.import
apotema = lado / 2  * math.tan * (180 / 12)
area = (6 * lado * apotema)
print(round, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
548.61
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
3
---- correct output:
100.77
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
4
---- correct output:
179.14
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
5
---- correct output:
279.9
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
6
---- correct output:
403.06
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
44.78
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:09:04)
-- CODE: 
math import
apotema = lado / 2  * math.tan() (math.pi() / 12)
area = (6 * lado * apotema)
print(round, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
548.61
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
3
---- correct output:
100.77
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
4
---- correct output:
179.14
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
5
---- correct output:
279.9
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
6
---- correct output:
403.06
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
44.78
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:50:10)
-- CODE: 
math.import
apotema = lado / 2  * math.tan * (180 / 12)
area = (6 * lado * apotema)
print(round, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
548.61
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
3
---- correct output:
100.77
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
4
---- correct output:
179.14
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
5
---- correct output:
279.9
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
6
---- correct output:
403.06
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
44.78
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:48:51)
-- CODE: 
math.import
apotema = lado / (2  * math.tan) * (math.pi / 12)
area = (6 * lado * apotema)
print(round, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
548.61
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
3
---- correct output:
100.77
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
4
---- correct output:
179.14
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
5
---- correct output:
279.9
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
6
---- correct output:
403.06
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
44.78
-- ERROR:
File "XXXX", line 1
    math.import
         ^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:09:21)
-- CODE: 
math impot
apotema = lado / 2  * math.tan() (math.pi() / 12)
area = (6 * lado * apotema)
print(round, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
548.61
-- ERROR:
File "XXXX", line 1
    math impot
         ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
3
---- correct output:
100.77
-- ERROR:
File "XXXX", line 1
    math impot
         ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
4
---- correct output:
179.14
-- ERROR:
File "XXXX", line 1
    math impot
         ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
5
---- correct output:
279.9
-- ERROR:
File "XXXX", line 1
    math impot
         ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
6
---- correct output:
403.06
-- ERROR:
File "XXXX", line 1
    math impot
         ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
44.78
-- ERROR:
File "XXXX", line 1
    math impot
         ^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:17:05)
-- CODE: 
math import
apotema = lado / (2  * math.tan) * (math.pi / 12)
area = (6 * lado * apotema)
print(round, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
548.61
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
3
---- correct output:
100.77
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
4
---- correct output:
179.14
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
5
---- correct output:
279.9
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
6
---- correct output:
403.06
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
44.78
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:48:11)
-- CODE: 
math import
apotema = lado / 2  * math.tan() (math.pi() / 12)
area = (6 * lado * apotema)
print(round, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
548.61
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
3
---- correct output:
100.77
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
4
---- correct output:
179.14
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
5
---- correct output:
279.9
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
6
---- correct output:
403.06
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
44.78
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:45:02)
-- CODE: 
math import
apotema = lado / 2  * math.tan() (math.pi() / 12)
area = (6 * lado * apotema)
print(, 2
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
548.61
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
3
---- correct output:
100.77
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
4
---- correct output:
179.14
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
5
---- correct output:
279.9
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
6
---- correct output:
403.06
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
44.78
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
